--- a/Vlearn/app/build.gradle
+++ b/Vlearn/app/build.gradle
@@ -39,4 +39,5 @@ dependencies {
     implementation 'com.mikhaellopez:circularimageview:3.2.0'
     implementation 'com.github.bumptech.glide:glide:4.9.0'
     implementation 'com.pierfrancescosoffritti.androidyoutubeplayer:core:10.0.5'
+    implementation 'com.github.curioustechizen.android-ago:library:1.4.0'
 }
