--- a/Vlearn/app/src/main/AndroidManifest.xml
+++ b/Vlearn/app/src/main/AndroidManifest.xml
@@ -8,8 +8,10 @@
         android:label="@string/app_name"
         android:roundIcon="@drawable/logo"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Design.NoActionBar">
-        <activity android:name=".activities.ViewPDFActivity"></activity>
+        android:theme="@style/Theme.AppCompat.NoActionBar">
+        <activity android:name=".activities.EditProfileActivity"></activity>
+        <activity android:name=".activities.ProfileViewActivity" />
+        <activity android:name=".activities.ViewPDFActivity" />
         <activity android:name=".activities.SubscribedResearchPaperActivity" />
         <activity android:name=".activities.TopicViewActivity" />
         <activity android:name=".activities.SubscribedCourseActivity" />
