--- a/Vlearn/app/build.gradle
+++ b/Vlearn/app/build.gradle
@@ -40,4 +40,5 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.9.0'
     implementation 'com.pierfrancescosoffritti.androidyoutubeplayer:core:10.0.5'
     implementation 'com.github.curioustechizen.android-ago:library:1.4.0'
+    implementation 'com.facebook.shimmer:shimmer:0.5.0'
 }
